tests/fixtures/errors/unknown_variant.gcl
index Phase = { Coast, Burn };
param x: Dimensionless[Phase] = {
    Phase::Coast: 1.0,
    Phase::Burn: 2.0,
};
param bad: Dimensionless = @x[Phase::NoSuch];
